ligolang/src/test/contracts/negative/vars_consts/capture_var_params.ligo
function foo(var x : int; const y : int) : int -> int is
  block {
    function bar(const _ : unit) : int is x + y;
  } with bar
